--- a/browsersupport/CoursesPlus.safariextension/Info.plist
+++ b/browsersupport/CoursesPlus.safariextension/Info.plist
@@ -17,11 +17,33 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>Chrome</key>
-	<dict/>
+	<dict>
+		<key>Global Page</key>
+		<string>etc/bg.safari.html</string>
+	</dict>
 	<key>Content</key>
 	<dict>
 		<key>Scripts</key>
-		<dict/>
+		<dict>
+			<key>Start</key>
+			<array>
+				<string>js/cpal.js</string>
+				<string>js/cpal.safari.js</string>
+				<string>js/jquery.js</string>
+				<string>js/bootstrap.js</string>
+				<string>js/components.js</string>
+				<string>js/inject.js</string>
+				<string>js/coursesLib.js</string>
+			</array>
+		</dict>
+		<key>Stylesheets</key>
+		<array>
+			<string>css/inject.css</string>
+		</array>
+		<key>Whitelist</key>
+		<array>
+			<string>*://courses2015.dalton.org/*</string>
+		</array>
 	</dict>
 	<key>Description</key>
 	<string>An extension that makes Dalton Courses look nicer, adds some features, and fixes some issues.</string>
