Prepare for services optional permissions

--- a/browsersupport/Chrome/manifest.json
+++ b/browsersupport/Chrome/manifest.json
@@ -39,6 +39,9 @@
 		"webRequest",
 		"webRequestBlocking"
 	],
+	"optional_permissions": [
+		"*://*/"
+	],
 	"web_accessible_resources": [
 		"images/*.png",
 		"images/logos/*.png",
