Start calendar services

--- a/browsersupport/Chrome/manifest.json
+++ b/browsersupport/Chrome/manifest.json
@@ -28,6 +28,7 @@ The manifest includes the icon, description, name, permissions, and more.
 				"js/cpal.chrome.js",
 				"js/jquery.js",
 				"js/bootstrap.js",
+				"js/services.js",
 				"js/components.js",
 				"js/inject.js",
 				"js/coursesLib.js"
