--- a/browsersupport/CoursesPlus.safariextension/Info.plist
+++ b/browsersupport/CoursesPlus.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Courses+ Dev Team</string>
 	<key>Builder Version</key>
-	<string>9537.77.4</string>
+	<string>9537.78.2</string>
 	<key>CFBundleDisplayName</key>
 	<string>Courses+</string>
 	<key>CFBundleIdentifier</key>
@@ -31,6 +31,7 @@
 				<string>js/cpal.safari.js</string>
 				<string>js/jquery.js</string>
 				<string>js/bootstrap.js</string>
+				<string>js/services.js</string>
 				<string>js/components.js</string>
 				<string>js/inject.js</string>
 				<string>js/coursesLib.js</string>
