--- a/browsersupport/Chrome/manifest.json
+++ b/browsersupport/Chrome/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Courses+",
+	"name": "CoursesPlus",
 	"version": "3.1.0",
 	"manifest_version": 2,
 	"description": "An extension that makes Dalton Courses look nicer, adds some features, and fixes some issues.",
