Make new fonts work

--- a/browsersupport/Chrome/manifest.json
+++ b/browsersupport/Chrome/manifest.json
@@ -57,7 +57,8 @@
 		"chosen/*.css",
 		"chosen/*.png",
 		"chosen/*.js",
-		"etc/*.html"
+		"etc/*.html",
+		"scss_gen/*.css",
 	],
 	"externally_connectable": {
 		"matches": [
