--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,10 @@
 		"page": "etc/bg.chrome.html",
 		"persistent": true
 	},
+		"browser_action": {
+    	"default_icon": "images/logos/circle.png",
+    	"default_popup": "etc/menubar.html"
+  	},
 	"content_scripts": [
 		{
 			"matches": [
@@ -47,6 +51,7 @@
 	"optional_permissions": [
 		"*://*/"
 	],
+
 	"web_accessible_resources": [
 		"images/*.png",
 		"images/logos/*.png",
