--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "CoursesPlus",
-	"version": "3.1.0",
+	"version": "3.2.0",
 	"manifest_version": 2,
-	"description": "An extension that makes Dalton Courses look nicer, adds some features, and fixes some issues.",
+	"description": "An extension that makes Dalton Courses awesome.",
 	"icons": {
 		"128": "images/icon128.png"
 	},
