--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
 				"js/cpal.chrome.js",
 				"js/jquery.js",
 				"js/bootstrap.js",
+				"js/consts.js",
 				"js/helpers.js",
 				"js/services.js",
 				"js/components.js",
