--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
 				"js/cpal.js",
 				"js/cpal.chrome.js",
 				"js/jquery.js",
-				"js/bootstrap.js",
+				"js/bootstrap.min.js",
 				"js/consts.js",
 				"js/helpers.js",
 				"js/services.js",
